Implemented originator patch and delete
