# lib/endpoints/common/response.js
@@ -142,6 +142,8 @@ function successResponse(res, resData, resBody) {
      * Other succesfull operations return 200.
      */
     switch (resBody.meta.operationId) {
+        case 'updateOriginator':
+        case 'deleteOriginator':
         case 'storeMainPreSharedKey':
         case 'deleteMainPreSharedKey':
         case 'storePreSharedKey':
