# lib/endpoints/originators.js
@@ -8,6 +8,8 @@ module.exports = {
     // Endpoint handler functions
     getOriginators,
     getOriginator,
+    updateOriginator,
+    deleteOriginator,
     getPreSharedKey,
     storePreSharedKey,
     deletePreSharedKey,
@@ -72,6 +74,79 @@ function getOriginator(req, res, operationId, callback) {
             resBody.meta.info = array.addItem(resBody.meta.info, 'Current originator state');
         }
         return response.sendIndicative(res, err, resBody, originatorData, callback);
+    });
+}
+
+/**
+ * Updates originator state data
+ * @function updateOriginator
+ * @alias module:lib/endpoints/originators.updateOriginator
+ * @param {object} req the http request
+ * @param {object} res the http response
+ * @param {string} operationId the operation id as defined in the openapi definition
+ * @param {logEndpointEventCb} callback
+ */
+function updateOriginator(req, res, operationId, callback) {
+    const originatorAddress = req.params.address;
+    const originatorData = req.body;
+
+    // Check if originator exists
+    wfState.getOriginatorData(originatorAddress, function endpointUpdateOriginatorCb(err, data = null) {
+        // Create response body and preserve information before responding
+        let resBody = response.createBody(req, operationId);
+
+        // Check orginator data
+        if (!err) {
+            if (!data) {
+                err = new ProcessingError(`Unknown originator: ${originatorAddress}`, null, 'WF_API_NO_RESOURCE');
+            } else {
+                resBody.meta.originator = originatorAddress;
+            }
+            // Add and check address for correct update
+            if (!originatorData.address) originatorData.address = originatorAddress;
+            if (originatorData.address !== originatorAddress) {
+                err = new ProcessingError(`Different originator address in request body: ${originatorData.address}`, null, 'WF_API_BAD_REQUEST');
+            }
+        }
+        // Upsert originator data
+        if (!err) {
+            resBody.meta.resource = `/originators/${originatorAddress}`;
+            resBody.meta.info = array.addItem(resBody.meta.info, 'Accepted request to update originator');
+            wfState.upsertOriginatorData(originatorData);
+        }
+        return response.sendIndicative(res, err, resBody, originatorData, callback);
+    });
+}
+
+/**
+ * Updates originator state data
+ * @function deleteOriginator
+ * @alias module:lib/endpoints/originators.deleteOriginator
+ * @param {object} req the http request
+ * @param {object} res the http response
+ * @param {string} operationId the operation id as defined in the openapi definition
+ * @param {logEndpointEventCb} callback
+ */
+function deleteOriginator(req, res, operationId, callback) {
+    const originatorAddress = req.params.address;
+
+    // Check if originator exists
+    wfState.getOriginatorData(originatorAddress, function endpointUpdateOriginatorCb(err, data = {}) {
+        // Create response body and preserve information before responding
+        let resBody = response.createBody(req, operationId);
+
+        // Check orginator data
+        if (!err && !data) {
+            err = new ProcessingError(`Unknown originator: ${originatorAddress}`, null, 'WF_API_NO_RESOURCE');
+        } else {
+            resBody.meta.originator = originatorAddress;
+        }
+        // Delete originator data
+        if (!err) {
+            resBody.meta.info = array.addItem(resBody.meta.info, 'Accepted request to delete originator');
+            wfState.removeOriginatorData(originatorAddress);
+        }
+        return response.sendIndicative(res, err, resBody, data, callback);
     });
 }
 
@@ -155,6 +230,7 @@ function storePreSharedKey(req, res, operationId, callback) {
                 // Add metadata to response
                 resBody.meta.blockchain = originatorData.blockchain;
                 resBody.meta.account = accountAddress;
+                resBody.meta.resource = `/originators/${originatorAddress}/psk/${accountAddress}`;
 
                 // Store pre-shared key
                 const keyId = hash(originatorData.blockchain + originatorAddress + accountAddress, KEYIDLENGTH);
@@ -271,11 +347,12 @@ function storeAuthToken(req, res, operationId, callback) {
             if (!err) err = new ProcessingError('Authentication token already exists', null, 'WF_API_RESOURCE_CONFLICT');
             return response.sendImperative(res, err, resBody, originatorData, callback);
         }
-        if (!err) resBody.meta.info = array.addItem(resBody.meta.info, 'Accepted request to store authentication token');
-
-        // Store data
+        // Store token
+        resBody.meta.info = array.addItem(resBody.meta.info, 'Accepted request to store authentication token');
         wfState.upsertKey('authTokens', authTokenId, authToken);
         authToken = undefined;
+
+        // Store originator data
         originatorData.name = req.body.name;
         originatorData.blockchain = req.body.blockchain;
         if (req.body.address) originatorData.address = req.body.address;
@@ -312,10 +389,10 @@ function deleteAuthToken(req, res, operationId, callback) {
         // Get originator data before deleting
         wfState.getOriginatorAuthToken(authTokenId, function getOriginatorAuthTokenCb(err, originatorData) {
             if (!originatorData) originatorData = {};
-            if (!err) resBody.meta.info = array.addItem(resBody.meta.info, 'Accepted request to delete authentication token');
-
-            // Remove authentication token from state and send response
-            wfState.removeOriginatorAuthToken(authTokenId);
+            if (!err) {
+                resBody.meta.info = array.addItem(resBody.meta.info, 'Accepted request to delete authentication token');
+                wfState.removeOriginatorAuthToken(authTokenId);
+            }
             return response.sendImperative(res, err, resBody, originatorData, callback);
         });
     });
