# lib/server.js
@@ -448,6 +448,8 @@ function getEndpoints() {
         [ '/blockchains/:blockchain/accounts/:account/transfer', 'POST', 'transferValue', wfApiBlockchainsHandler.transferValue ],
         [ '/originators', 'GET', 'getAllOriginators', wfApiOriginatorsHandler.getOriginators ],
         [ '/originators/:address', 'GET', 'getOriginator', wfApiOriginatorsHandler.getOriginator ],
+        [ '/originators/:address', 'PATCH', 'updateOriginator', wfApiOriginatorsHandler.updateOriginator ],
+        [ '/originators/:address', 'DELETE', 'deleteOriginator', wfApiOriginatorsHandler.deleteOriginator ],
 
         // Originator pre-shared keys
         [ '/originators/:address/psk/:account', 'GET', 'getPreSharedKey', wfApiOriginatorsHandler.getPreSharedKey ],
