# static/openapi.json
@@ -2,7 +2,7 @@
     "openapi": "3.0.1",
     "info": {
         "title": "Whiteflag API",
-        "version": "1.0.0-alpha.5-dev",
+        "version": "1.0.0-alpha.6-dev",
         "description": "This Whiteflag Application Programming Interface (API) is a [Node.js](https://nodejs.org/en/about/) software implementation of the API layer that provides an interface with the Whiteflag messaging network on one or more underlying blockchains. It acts as a message transceiver between one or more blockchains and one or more end-user applications.\n\nThis API is a so called Minumum Viable Product (MVP), which means that it only supports the core features of the Whiteflag protocol for development and testing purposes. As such, it serves as the reference implementation of the Whiteflag protocol, but it is not designed and tested for secure usage and performance in a production environment.\n\nTwo methods are available for interaction with the API: 1. a [REST API](https://en.wikipedia.org/wiki/Representational_state_transfer) for originators to provide Whiteflag message to be sent on the blockchain, and 2. a [socket.io](https://socket.io/) [web socket](https://en.wikipedia.org/wiki/WebSocket) variant available on `/socket` for clients to listen for incoming Whiteflag messages from a blockchain. A webpage with embedded socket listener is available on [/listen](/listen).\n\nThis definition documents the API in [OpenAPI format](https://swagger.io/specification/). The following JSON schemas and specifications are used by this API definition and available with the links below:\n* [Whiteflag Protocol specification](protocol/whiteflag.standard.html)\n* [Whiteflag Protocol message schema](protocol/message.schema.json)\n* [Whiteflag API message metaheader schema](protocol/metaheader.schema.json)\n* [Whiteflag API state schema](protocol/state.schema.json)\n\nAll response bodies are structured as `{meta, data, errors}`, based on the [JSON API Specification](https://jsonapi.org/format/), which has been used as a guideline (and as a guideline only).",
         "x-logo": {
             "url": "wflogo.png",
@@ -513,7 +513,7 @@
         "/originators": {
             "get": {
                 "tags": [ "Originators", "State" ],
-                "description": "Returns the details of all kwown Whiteflag originators.",
+                "description": "Returns the details of all known Whiteflag originators.",
                 "operationId": "getAllOriginators",
                 "responses": {
                     "200": {
@@ -533,6 +533,41 @@
                 "responses": {
                     "200": {
                         "$ref": "#/components/responses/originatorState"
+                    },
+                    "404": {
+                        "$ref": "#/components/responses/error404"
+                    },
+                    "500": {
+                        "$ref": "#/components/responses/error500"
+                    }
+                }
+            },
+            "patch": {
+                "tags": [ "Originators", "State" ],
+                "description": "Updates the details of the specified Whiteflag originator. Only the provided properties will be updated. Please BE CAREFUL as this may result in loss of critical data such as cryptographic keys. This operation may be disabled in the configuration.",
+                "operationId": "updateOriginator",
+                "requestBody": {
+                    "$ref": "#/components/requestBodies/originatorData"
+                },
+                "responses": {
+                    "202": {
+                        "$ref": "#/components/responses/originatorAccepted"
+                    },
+                    "404": {
+                        "$ref": "#/components/responses/error404"
+                    },
+                    "500": {
+                        "$ref": "#/components/responses/error500"
+                    }
+                }
+            },
+            "delete": {
+                "tags": [ "Originators", "State" ],
+                "description": "Deletes the specified Whiteflag originator. Please BE CAREFUL as this may result in loss of critical data such as cryptographic keys. This operation may be disabled in the configuration.",
+                "operationId": "deleteOriginator",
+                "responses": {
+                    "202": {
+                        "$ref": "#/components/responses/originatorAccepted"
                     },
                     "404": {
                         "$ref": "#/components/responses/error404"
@@ -904,7 +939,7 @@
                 }
             },
             "wfExtSignature": {
-                "description": "Request to verify a Whiteflag Authentication Signature",
+                "description": "An extended Whiteflag Authentication Signature",
                 "content": {
                     "application/json": {
                         "schema": {
@@ -941,7 +976,7 @@
                 }
             },
             "transferValue": {
-                "description": "Request to transfer value to another blockchain account",
+                "description": "Data required to transfer value to another blockchain account",
                 "content": {
                     "application/json": {
                         "schema": {
@@ -968,7 +1003,7 @@
                 }
             },
             "createAccount": {
-                "description": "Request to create blockchain account",
+                "description": "Blockchain account data",
                 "content": {
                     "application/json": {
                         "schema": {
@@ -986,7 +1021,7 @@
                 }
             },
             "updateAccount": {
-                "description": "Request to update blockchain account",
+                "description": "Blockchain account data",
                 "content": {
                     "application/json": {
                         "schema": {
@@ -995,21 +1030,18 @@
                     }
                 }
             },
-            "deleteAccount": {
-                "description": "Request to delete blockchain account",
+            "originatorData": {
+                "description": "Originator data as stored in Whiteflag protocol state; all properties are optional and only provided properties will be updated",
                 "content": {
                     "application/json": {
                         "schema": {
-                            "description": "Blockchain account deletion data object",
-                            "type": "object",
-                            "additionalProperties": true,
-                            "properties": {}
+                            "$ref": "protocol/state.schema.json#/definitions/originatorObject"
                         }
                     }
                 }
             },
             "storePreSharedKey": {
-                "description": "Request to store a pre-shared encryption key for an originator",
+                "description": "Pre-shared encryption key data",
                 "content": {
                     "application/json": {
                         "schema": {
@@ -1028,7 +1060,7 @@
                 }
             },
             "storeAuthToken": {
-                "description": "Request to store a pre-shared secret authentication token for an originator",
+                "description": "Pre-shared secret authentication token data",
                 "content": {
                     "application/json": {
                         "schema": {
@@ -1367,6 +1399,24 @@
                 }
             },
             "originatorState": {
+                "description": "Successfully retrieved and returning known Whiteflag originator",
+                "content": {
+                    "application/json": {
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "meta": {
+                                    "$ref": "#/components/schemas/responseBodyMetaObject"
+                                },
+                                "data": {
+                                    "$ref": "protocol/state.schema.json#/definitions/originatorObject"
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "originatorAccepted": {
                 "description": "Successfully retrieved and returning known Whiteflag originators",
                 "content": {
                     "application/json": {
